# falsb4mpa

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/german/: german.csv
data/processed/titanic/: titanic.csv
falsb4mpa/benchmark/: adult_mpa-unfair_lr.ipynb  adult_mpa-unfair_nn.ipynb
falsb4mpa/dataset/: adult_prep.ipynb  adult_prep_mpa.ipynb  adult_prep_mpa_balanced.ipynb  adult_viz.ipynb  german_prep.ipynb  german_viz.ipynb  load_data.py  titanic_prep.ipynb  titanic_viz.ipynb  utils.py
falsb4mpa/evaluation/: evaluation.py  metrics.py
falsb4mpa/modeling/: unfair_lr.py
falsb4mpa/modeling/unfair/: unfair_lr.py  unfair_nn.py
